<resources>
    <string name="app_name">Face fun</string>
    <string name="app_name_header">Face fun</string>
    <string name="more_icon_description">Click to see more info</string>
    <string name="menu_help">Help</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sub_setting1">Sub settings 1</string>
    <string name="menu_sub_setting2">Sub settings 2</string>
    <string name="upload_icon_description">Click to upload picture</string>
    <string name="upload_message">Click to upload your picture</string>
    <string name="upload_message_face_swap_before">Click to upload your first picture</string>
    <string name="upload_message_face_swap_after"> Image uploaded. Click \"next\"  button to proceed.</string>
    <string name="upload_message_face_swap2_before">Click to upload second picture</string>
    <string name="upload_message_universal">Click to upload picture</string>
    <string name="result_message">Results:</string>
    <string name="button_gallery">Click to open gallery</string>
    <string name="button_take_photo">Click to take new photo</string>
    <string name="button_next">Click to proceed</string>
    <string name="main_menu_pictures">Picture not loaded</string>
    <string name="gallery_full_picture">Your Picture is not Loaded</string>
    <string name="title_face_sawp">Face swap</string>
    <string name="title_age_detection">Age detection</string>
    <string name="title_celeb_fr">Celeb face recognition</string>
    <string name="title_celeb_lookalike">Your celeb look alike</string>
    <string name="title_gallery">Gallery</string>
    <string name="test_text">Opis ove slike ide ovdje nesto kratkog tolko da je</string>
    <string name="upload_warning_message">Image upload failed. Something is wrong with image.</string>
    <string name="gallery">Gallery</string>
    <string name="favorites">My Favorites</string>

</resources>