<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/download_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultPage">

    <LinearLayout
        android:id="@+id/LinearLayout_Header"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_Header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5">

            <TextView
                android:id="@+id/textView_header"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/chewy_regular"
                android:gravity="center"
                android:text="@string/app_name_header"
                android:textColor="#292424"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_more_icon"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:contentDescription="@string/more_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView_header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.487"
                app:srcCompat="@drawable/menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Body"
        android:layout_width="match_parent"
        android:layout_height="587dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_Body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <!-- https://www.taimoorsikander.com/how-to-add-a-gif-image-in-android-studio-example/ -->

            <ImageView
                android:id="@+id/test"
                android:layout_width="191dp"
                android:layout_height="161dp"
                android:background="@drawable/upload_image_icon"
                android:contentDescription="@string/upload_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.91"
                tools:srcCompat="@drawable/upload_image_icon" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:src="@drawable/not_found"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/WarningMessage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:fontFamily="@font/chewy_regular"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/upload_warning_message"
                android:textColor="#47525E"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Footer"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Body"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_Footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B1AEAC">

            <ImageButton
                android:id="@+id/return_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/return_button_icon"
                android:contentDescription="@string/button_gallery"
                android:onClick="goBack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/take_picture_button"
                app:layout_constraintHorizontal_bias="0.209"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/take_picture_button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/download_icon"
                android:contentDescription="@string/button_take_photo"
                android:onClick="saveImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/home_icon"
                android:contentDescription="@string/button_next"
                android:onClick="launchMainActivity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.751"
                app:layout_constraintStart_toEndOf="@+id/take_picture_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.541" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>