<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadPhoto">

    <LinearLayout
        android:id="@+id/LinearLayout_Header"
        android:layout_width="428dp"
        android:layout_height="73dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_Header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_header"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/chewy_regular"
                android:gravity="center"
                android:text="@string/app_name_header"
                android:textColor="#292424"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_more_icon"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:contentDescription="@string/more_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.789"
                app:layout_constraintStart_toEndOf="@+id/textView_header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.488"
                app:srcCompat="@drawable/menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Body"
        android:layout_width="425dp"
        android:layout_height="641dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_Body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView_upload_icon"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/upload_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.237"
                tools:srcCompat="@drawable/upload_image_icon" />

            <TextView
                android:id="@+id/UploadMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chewy_regular"
                android:text="@string/upload_message_face_swap"
                android:textColor="#47525E"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_upload_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Footer"
        android:layout_width="426dp"
        android:layout_height="81dp"
        android:background="#B1AEAC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Body"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_Footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B1AEAC">

            <ImageButton
                android:id="@+id/button_gallery"
                android:layout_width="56dp"
                android:layout_height="57dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/_484211441606988091_128"
                android:contentDescription="@string/button_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_take_photo"
                app:layout_constraintHorizontal_bias="0.209"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_take_photo"
                android:layout_width="107dp"
                android:layout_height="97dp"
                android:background="@drawable/_689683021530273512_128"
                android:contentDescription="@string/button_take_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="56dp"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/_6537366261580817585_128"
                android:contentDescription="@string/button_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.751"
                app:layout_constraintStart_toEndOf="@+id/button_take_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.541" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>