<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryPage">

    <LinearLayout
        android:id="@+id/LinearLayout_Header"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_Header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5">

            <TextView
                android:id="@+id/textView_header"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/chewy_regular"
                android:gravity="center"
                android:text="@string/app_name_header"
                android:textColor="#292424"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_more_icon"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:contentDescription="@string/more_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.955"
                app:layout_constraintStart_toEndOf="@+id/textView_header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.487"
                app:srcCompat="@drawable/menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Gallery_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Header">

        <TextView
            android:id="@+id/Gallery_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title_gallery"
            android:textColor="#47525E"
            android:textSize="26sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Gallery_title">

        <GridView
            android:id="@+id/GalleryGrind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:columnWidth="100dp"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>